@@ -590,12 +590,9 @@ class module
 		return !preg_match( '/[^a-zA-Z0-9_\\@]/', $name );
 	}
 
-	function is_email($addr)
+	function is_email( $addr )
 	{
-		$p = '/^[a-z0-9!#$%&*+-=?^_`{|}~]+(\.[a-z0-9!#$%&*+-=?^_`{|}~]+)*';
-		$p.= '@([-a-z0-9]+\.)+([a-z]{2,3}';
-		$p.= '|info|asia|arpa|aero|coop|name|jobs|mobi|museum|travel)$/ix';
-		return preg_match($p, $addr);
+		return filter_var( $addr, FILTER_VALIDATE_EMAIL );
 	}
 
 	function display_icon($icon)
